# ror-conan-recipes

./: .gitignore  .pylintrc  README.md  build.py  requirements.txt  run_linter.bat  update_pkgs.py
.conan-profiles/: ubuntu-debug  ubuntu-release  vs-2016-debug  vs-2016-release  vs-2022-debug  vs-2022-release
.github/workflows/: conan-pkg.yml  conan.yml
angelscript/: config.yml
angelscript/all/: conandata.yml  conanfile.py
bounce/all/: conandata.yml  conanfile.py
cg-toolkit/all/: conandata.yml  conanfile.py
cg/all/: conanfile.py
directx-sdk/: config.yml
directx-sdk/all/: conandata.yml  conanfile.py
discord-game-sdk/: config.yml
discord-game-sdk/all/: CMakeLists.txt  conandata.yml  conanfile.py
discord-rpc/all/: conandata.yml  conanfile.py
freeimage/: config.yml
freeimage/all/: conandata.yml  conanfile.py
imgui/: config.yml  repoinfo.yml
imgui/all/: CMakeLists.txt  conanfile.py
mygui/: config.yml  repoinfo.yml
mygui/all/: conandata.yml  conanfile.py
mygui/next/: conandata.yml  conanfile.py
ogre/: config.yml  repoinfo.yml
ogre-caelum/: config.yml
ogre-caelum/all/: conandata.yml  conanfile.py
ogre-crowd/: config.yml
ogre-crowd/all/: conandata.yml  conanfile.py
ogre-next/: config.yml
ogre-next/2.3.x/: conandata.yml  conanfile.py
ogre-pagedgeometry/: config.yml
ogre-pagedgeometry/1.11/: conandata.yml  conanfile.py
ogre-pagedgeometry/all/: conandata.yml  conanfile.py
ogre/1.11/: conandata.yml  conanfile.py
ois/: repoinfo.yml
pthread-win/: config.yml
socketw/: config.yml
tools/: conanfile.py  cpfd.sh  diffo.sh
(+74 files in other folders)
